--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port = 9090
+itemlist.path =E:\\programming\\projects\\InterviewAssignments\\ADP\\ShopingCounterOnGit\\ShopingCounter\\src\\main\\resources\\barcodeitem.json
+categorylist.path=E:\\programming\\projects\\InterviewAssignments\\ADP\\ShopingCounterOnGit\\ShopingCounter\\src\\main\\resources\\category.json
