[ADP-TASK-001] code updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port = 9090
-itemlist.path =E:\\programming\\projects\\InterviewAssignments\\ADP\\ShopingCounterOnGit\\ShopingCounter\\src\\main\\resources\\barcodeitem.json
-categorylist.path=E:\\programming\\projects\\InterviewAssignments\\ADP\\ShopingCounterOnGit\\ShopingCounter\\src\\main\\resources\\category.json
+itemlist.path=barcodeitem.json
+categorylist.path=category.json
